fix(frontend): overlapping character tm-452

--- a/apps/frontend/src/pages/profile/styles.module.css
+++ b/apps/frontend/src/pages/profile/styles.module.css
@@ -89,6 +89,12 @@
 	transform: translateY(-50%);
 }
 
+@media screen and (--large-screen) {
+	.profile-character {
+		left: 11%;
+	}
+}
+
 @media screen and (--medium-screen) {
 	.container {
 		padding-right: 24px;
